RESOLVED FIXED240001
Fix buggy assert in CoreAudioSharedUnit::configureSpeakerProc
https://bugs.webkit.org/show_bug.cgi?id=240001
Summary Fix buggy assert in CoreAudioSharedUnit::configureSpeakerProc
youenn fablet
Reported 2022-05-03 03:07:22 PDT
Fix buggy assert in CoreAudioSharedUnit::configureSpeakerProc
Attachments
Patch (1.75 KB, patch)
2022-05-03 03:08 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2022-05-03 03:08:25 PDT
EWS
Comment 2 2022-05-03 09:10:50 PDT
Committed r293728 (250216@main): <https://commits.webkit.org/250216@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458728 [details].
Radar WebKit Bug Importer
Comment 3 2022-05-03 09:11:14 PDT
Note You need to log in before you can comment on or make changes to this bug.