Cherry-pick r293728. rdar://problem/92362769

Fix buggy assert in CoreAudioSharedUnit::configureSpeakerProc
    https://bugs.webkit.org/show_bug.cgi?id=240001

    Reviewed by Eric Carlson.

    Manually tested.

    * platform/mediastream/mac/CoreAudioCaptureSource.cpp:
    Initialize the sampleRate field before using it.

    Canonical link: https://commits.webkit.org/250216@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293728 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.584@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@294839 268f45cc-cd09-0410-ab3c-d52691b4dbfc